Modernize the tic tac toe demo
- add gitignore
- replace ant with maven for building
- add module info
- update to java 15
- IDE suggested cleanups
- additional documentation